# public/swagger.json
@@ -951,133 +951,10 @@
           {
             "name": "prompt",
             "in": "query",
-            "description": "Prompt string",
+            "description": "Masukan Text nya disini",
             "required": true,
             "schema": {
               "type": "string"
-            }
-      },
-          {
-            "name": "negative_prompt",
-            "in": "query",
-            "description": "Negative string",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-      },
-          {
-            "name": "model",
-            "in": "query",
-            "description": "Gaya",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "(none)",
-            "Cinematic",
-            "Photographic",
-            "Anime",
-            "Manga",
-            "Digital Art",
-            "Pixel art",
-            "Fantasy art",
-            "Neonpunk",
-            "3D Model"
-          ]
-            }
-      },
-          {
-            "name": "sampler",
-            "in": "query",
-            "description": "Sampler",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "DDIM",
-            "Euler a",
-            "Euler",
-            "DPM++ 2M Karras",
-            "DPM++ 2M SDE Karras",
-            "DPM++ SDE Karras"
-          ]
-            }
-      },
-          {
-            "name": "kualitas",
-            "in": "query",
-            "description": "Kualitas",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "(none)",
-            "Light",
-            "Standard",
-            "Heavy"
-          ]
-            }
-      },
-          {
-            "name": "lebar",
-            "in": "query",
-            "description": "Lebar gambar",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "640",
-            "832",
-            "1024",
-            "1152",
-            "1344",
-            "768",
-            "896",
-            "1216",
-            "1536"
-          ]
-            }
-      },
-          {
-            "name": "tinggi",
-            "in": "query",
-            "description": "Tinggi gambar",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "640",
-            "832",
-            "1024",
-            "1152",
-            "1344",
-            "768",
-            "896",
-            "1216",
-            "1536"
-          ]
-            }
-      },
-          {
-            "name": "ukuran",
-            "in": "query",
-            "description": "Rasio",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-            "Custom",
-            "640 x 1536",
-            "832 x 1216",
-            "1024 x 1024",
-            "1152 x 896",
-            "1344 x 768",
-            "768 x 1344",
-            "896 x 1152",
-            "1216 x 832",
-            "1536 x 640"
-          ]
             }
       }
     ],
